Implement extraction architecture and staging pipeline

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extraction\" />
-    <Folder Include="Options\" />
+    <ProjectReference Include="../Domain/Domain.csproj" />
   </ItemGroup>
 
 </Project>
