--- a/Worker/appsettings.Development.json
+++ b/Worker/appsettings.Development.json
@@ -1,8 +1,30 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CsvSource": {
+    "DatasetName": "customers",
+    "FilePath": "Data/customers.csv",
+    "Delimiter": ","
+  },
+  "DatabaseSource": {
+    "DatasetName": "order_details",
+    "ConnectionString": "Server=localhost;Database=KMVentas;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Query": "SELECT OrderId, CustomerId, ProductId, Quantity, TotalPrice, OrderDate FROM Fact.order_details"
+  },
+  "ApiSource": {
+    "DatasetName": "products",
+    "BaseAddress": "https://localhost:5001/",
+    "Endpoint": "api/products",
+    "TimeoutSeconds": 30
+  },
+  "Staging": {
+    "BasePath": "staging"
+  },
+  "Worker": {
+    "IntervalSeconds": 300
   }
 }
