Improve CSV extraction diagnostics and header validation

--- a/Worker/appsettings.Development.json
+++ b/Worker/appsettings.Development.json
@@ -1,8 +1,40 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CsvSource": {
+    "DatasetName": "customers",
+    "DirectoryPath": "Data/Customers",
+    "SearchPattern": "*.csv",
+    "Delimiter": ",",
+    "RequiredHeaders": [
+      "CustomerId",
+      "FirstName",
+      "LastName",
+      "Email",
+      "Phone",
+      "City",
+      "Country"
+    ]
+  },
+  "DatabaseSource": {
+    "DatasetName": "order_details",
+    "ConnectionString": "Server=localhost;Database=KMVentas;Trusted_Connection=True;TrustServerCertificate=True;",
+    "Query": "SELECT OrderId, CustomerId, ProductId, Quantity, TotalPrice, OrderDate FROM Fact.order_details"
+  },
+  "ApiSource": {
+    "DatasetName": "products",
+    "BaseAddress": "https://localhost:5001/",
+    "Endpoint": "api/products",
+    "TimeoutSeconds": 30
+  },
+  "Staging": {
+    "BasePath": "staging"
+  },
+  "Worker": {
+    "IntervalSeconds": 300
   }
 }
