--- a/Worker/appsettings.json
+++ b/Worker/appsettings.json
@@ -4,5 +4,37 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CsvSource": {
+    "DatasetName": "customers",
+    "DirectoryPath": "Data/Customers",
+    "SearchPattern": "*.csv",
+    "Delimiter": ",",
+    "RequiredHeaders": [
+      "CustomerId",
+      "FirstName",
+      "LastName",
+      "Email",
+      "Phone",
+      "City",
+      "Country"
+    ]
+  },
+  "DatabaseSource": {
+    "DatasetName": "order_details",
+    "ConnectionString": "",
+    "Query": "SELECT OrderId, CustomerId, ProductId, Quantity, TotalPrice, OrderDate FROM Fact.order_details"
+  },
+  "ApiSource": {
+    "DatasetName": "products",
+    "BaseAddress": "https://api.example.com/",
+    "Endpoint": "products",
+    "TimeoutSeconds": 30
+  },
+  "Staging": {
+    "BasePath": "staging"
+  },
+  "Worker": {
+    "IntervalSeconds": 900
   }
 }
